Fix Pull Request merge buttons on mobile (#13035)

--- a/web_src/less/_repository.less
+++ b/web_src/less/_repository.less
@@ -1053,6 +1053,16 @@
             &.no-header {
               #avatar-arrow;
             }
+
+            @media only screen and (max-width: 767px) {
+              .form .button {
+                width: 100%;
+
+                &:not(:last-child) {
+                  margin-bottom: 1rem;
+                }
+              }
+            }
           }
 
           .markdown {
